--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header class="header">
     <div class="flex">
-        <a href="#" class="logo"><img src="IMAGES/nav-logo.jpg" width="90" height="90" alt="logo"></a>
+        <a href="#" class="logo"><img src="nav-logo.jpg" width="90" height="90" alt="logo"></a>
 
         <nav class="navbar">
             <a href="#home">home</a>
@@ -48,22 +48,22 @@
 
     <div class="box-container">
         <div class="box">
-            <img src="IMAGES/costume" alt="" height="150" width="120">
+            <img src="costume" alt="" height="150" width="120">
             <h3>costumes</h3>
         </div>
 
         <div class="box">
-            <img src="IMAGES/masks.jpg" alt="" height="150" width="120">
+            <img src="masks.jpg" alt="" height="150" width="120">
             <h3>masks</h3>
         </div>
 
         <div class="box">
-            <img src="IMAGES/presents.jpg" alt="" height="150" width="120">
+            <img src="presents.jpg" alt="" height="150" width="120">
             <h3>presents</h3>
         </div>
 
         <div class="box">
-            <img src="IMAGES/tickets.jpg" alt="" height="150" width="120">
+            <img src="tickets.jpg" alt="" height="150" width="120">
             <h3>tickets</h3>
         </div>
     </div>
@@ -75,7 +75,7 @@
 <section class="about" id="about">
     <div class="row">
         <div class="image">
-            <img src="IMAGES/trick or treat.png" alt="" height="300" width="100">
+            <img src="trick or treat.png" alt="" height="300" width="100">
         </div>
         <div class="content">
             <span>about the party</span>
@@ -99,42 +99,42 @@
     </div>
     <div class="box-container">
         <div class="box">
-            <img src="IMAGES/ghost tour.jpg" alt="">
+            <img src="ghost tour.jpg" alt="">
             <h3>ghost tour</h3>
             <p>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Voluptatem, labore?</p>
         </div>
 
         <div class="box">
-            <img src="IMAGES/vampire ball.jpg" alt="">
+            <img src="vampire ball.jpg" alt="">
             <h3>vampire's ball</h3>
             <p>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Voluptatem, labore?</p>
         </div>
 
         <div class="box">
-            <img src="IMAGES/halloween crafts.jpg" alt="">
+            <img src="halloween crafts.jpg" alt="">
             <h3>halloween crafts</h3>
             <p>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Voluptatem, labore?</p>
         </div>
 
         <div class="box">
-            <img src="IMAGES/witch dance party.jpg" alt="">
+            <img src="witch dance party.jpg" alt="">
             <h3>witch dance party</h3>
             <p>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Voluptatem, labore?</p>
         </div>
 
         <div class="box">
-            <img src="IMAGES/jack-o-lantern party.jpg" alt="">
+            <img src="jack-o-lantern party.jpg" alt="">
             <h3>Jack-0'-Lantern pinata</h3>
             <p>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Voluptatem, labore?</p>
         </div>
 
         <div class="box">
-            <img src="IMAGES/halloween party.jpg" alt="">
+            <img src="halloween party.jpg" alt="">
             <h3>halloween party</h3>
             <p>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Voluptatem, labore?</p>
@@ -245,7 +245,7 @@
     <div class="box-container">
         <div class="box">
             <div class="image">
-                <img src="IMAGES/bonnie.jpg" alt=""  height="150" width="150">
+                <img src="bonnie.jpg" alt=""  height="150" width="150">
             </div>
             <div class="share">
                 <a href="#" class="fab fa-whatsapp"></a>
@@ -261,7 +261,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="IMAGES/damon.jpg" alt=""  height="150" width="150">
+                <img src="damon.jpg" alt=""  height="150" width="150">
             </div>
             <div class="share">
                 <a href="#" class="fab fa-whatsapp"></a>
@@ -277,7 +277,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="IMAGES/klaus.jpg" alt=""  height="150" width="150">
+                <img src="klaus.jpg" alt=""  height="150" width="150">
             </div>
             <div class="share">
                 <a href="#" class="fab fa-whatsapp"></a>
@@ -293,7 +293,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="IMAGES/hayley.jpg" alt="" height="150" width="150">
+                <img src="hayley.jpg" alt="" height="150" width="150">
             </div>
             <div class="share">
                 <a href="#" class="fab fa-whatsapp"></a>
@@ -363,7 +363,7 @@
     </section>
 
     <div class="image">
-        <img src="IMAGES/halloween footer.png" alt="">
+        <img src="halloween footer.png" alt="">
     </div>
 
 
@@ -372,7 +372,7 @@
 
 
 <!--custom js file link-->
-<script src="C:\Users\ThinkBook\halloween\script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
