--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                 <img src="damon.jpg" alt=""  height="150" width="150">
             </div>
             <div class="share">
-                <a href="#" class="fab fa-whatsapp"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-pinterest"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="whatsapp"></a>
+                <a href="#" class="instagram"></a>
+                <a href="#" class="pinterest"></a>
+                <a href="#" class="linkedin"></a>
             </div>
             <div class="info">
                 <h3>Damon Salvatore</h3>
